finish unit test